<resources>
    <string name="app_name">Roommate App</string>
    <string name="chores_label">Chores</string>
    <string name="schedule_label">Schedule</string>
    <string name="pay_label">Payment</string>
    <string name="shop_label">Shopping List</string>
    <string name="freq_daily">Daily</string>
    <string name="freq_weekly">Weekly</string>
    <string name="freq_monthly">Monthly</string>
    <string name="content_desc_new_chore">New Chore</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="chores_desc_data_id">desc_data</string>
    <string name="chores_freq_data_id">freq_data</string>
    <string name="complete">Complete</string>
<<<<<<< HEAD
    <string name="delete">Delete</string>
=======
    <string name="price">Price:</string>
    <string name="pay">Pay</string>
>>>>>>> 19be052a4f206dee6c636650adf514434b5c7c16
    <string-array name="chores_frequencies">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="debug_chores_frequencies">
        <item>Debug</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="report_time_intervals">
        <item>Last 7 Days</item>
        <item>Last 2 Weeks</item>
        <item>Last Month</item>
        <item>Last 3 Months</item>
        <item>All Time</item>
    </string-array>
</resources>
