<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!--main content-->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/pay_butt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/pay_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/sched_butt"
                app:layout_constraintEnd_toStartOf="@+id/sched_butt"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/sched_butt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/schedule_label"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintBottom_toTopOf="@+id/chore_butt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.631"
                app:layout_constraintStart_toEndOf="@+id/pay_butt"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/chore_butt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/chores_label"
                app:layout_constraintBottom_toTopOf="@+id/shop_butt"
                app:layout_constraintEnd_toStartOf="@+id/sched_butt"
                app:layout_constraintStart_toEndOf="@+id/pay_butt"
                app:layout_constraintTop_toBottomOf="@+id/sched_butt" />

            <Button
                android:id="@+id/shop_butt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/shop_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sched_butt"
                app:layout_constraintStart_toEndOf="@+id/pay_butt"
                app:layout_constraintTop_toBottomOf="@+id/chore_butt" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

    <!--drawer-->
    <android.support.design.widget.NavigationView
        android:id="@+id/main_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/main_drawer_menu"/>

</android.support.v4.widget.DrawerLayout>